--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hello welcome to git </h1>
     <button >click me </button>
+    <form action="submit">submit </form>
 </body>
 </html>
