--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>hello welcome to git </h1>
+    <p>also know github</p>
     <button >click me </button>
     <form action="submit">submit </form>
+    <h2> this is version 6 </h2>
+    
+    
 </body>
 </html>
