--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>hello welcome to git </h1>
@@ -13,5 +14,6 @@
     <h2> this is version 6 </h2>
     
     
+
 </body>
 </html>
