--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <button >click me </button>
     <form action="submit">submit </form> 
     <h2> this is version 8.1 </h2>
+    <form>
+  <input type="radio" id="html" name="fav_language" value="HTML">
+  <label for="html">HTML</label><br>
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">CSS</label><br>
+  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+  <label for="javascript">JavaScript</label>
+</form>
     
     
 
